--- a/src/components/ProductList.css
+++ b/src/components/ProductList.css
@@ -25,8 +25,12 @@
     transition: background-color 0.3s ease-in-out;
 }
 
+.product-item.selected {
+    background-color: #65a9f2; 
+  }
+
 .product-item:hover {
-    background-color: #f0f0f0;
+    background-color: #65a9f2;
 }
 
 .product-detail {
